--- a/index.html
+++ b/index.html
@@ -19,28 +19,31 @@
         .container {
             text-align: center;
             background-color: #fff;
-            padding: 40px;
+            padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            width: 90%; 
+            max-width: 400px; 
         }
         h1 {
             color: #4CAF50;
-            font-size: 24px;
-            margin-bottom: 20px;
+            font-size: 20px;
+            margin-bottom: 10px;
         }
         p {
             color: #333;
-            font-size: 16px;
-            margin-bottom: 30px;
+            font-size: 14px; 
+            margin-bottom: 20px;
         }
         a {
             display: inline-block;
-            padding: 10px 20px;
+            padding: 10px 15px;
             background-color: #ff5f5f;
             color: #fff;
             text-decoration: none;
             border-radius: 8px;
             transition: background-color 0.3s ease;
+            font-size: 14px;
         }
         a:hover {
             background-color: #d83030;
@@ -51,8 +54,8 @@
 
     <div class="container">
         <h1>Pesan Berhasil Terkirim!</h1>
-        <p>Terima kasih telah mengirimkan pesan. Kami akan segera menanggapi Anda.</p>
-        <a href="form-kirim-pesan.html">Kembali ke Formulir</a> <!-- Ganti dengan path file form kirim pesan -->
+        <p>Terima kasih telah mengirimkan pesan. Razel akan segera menanggapi Anda.</p>
+        <a href="form-kirim-pesan.html">Kembali ke Formulir</a>
     </div>
 
 </body>
