--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
         <h1>Pesan Berhasil Terkirim!</h1>
         <p>Terima kasih telah mengirimkan pesan. Razel akan segera menanggapi Anda.</p>
-        <a href="form-kirim-pesan.html">Kembali ke Formulir</a>
+        <a href="https://razeltamtia21.github.io/kirim-pesan/">Kembali ke Formulir</a>
     </div>
 
 </body>
