--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div class="container">
         <h1>Pesan Berhasil Terkirim!</h1>
-        <p>Terima kasih telah mengirimkan pesan. Leluch Lamperouge akan segera menanggapi Anda.</p>
+        <p>Terima kasih telah mengirimkan pesan. Lelouch Lamperouge akan segera menanggapi Anda.</p>
         <a href="https://razeltamtia21.github.io/Website-Lelouch-Lamperouge/">Kembali ke Website</a>
     </div>
 
